--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
     "license": "MIT",
     "require": {
         "php":               ">=5.6",
-        "arcanedev/support": "~3.20"
+        "arcanedev/support": "~4.0"
     },
     "require-dev": {
         "phpunit/phpcov":  "~3.0",
         "phpunit/phpunit": "~5.0",
-        "orchestra/testbench": "~3.0"
+        "orchestra/testbench-browser-kit": "~3.0",
+        "orchestra/database": "~3.0"
     },
     "autoload": {
         "psr-4": {
@@ -33,11 +34,13 @@
         }
     },
     "scripts": {
-        "testbench": "composer require --dev \"orchestra/testbench=~3.0\""
+        "testbench": "composer require --dev \"orchestra/testbench-browser-kit=~3.0\" \"orchestra/database=~3.0\""
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable" : true
 }
