--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,13 @@
     "license": "MIT",
     "require": {
         "php":               ">=5.6",
-        "arcanedev/support": "~4.0"
+        "arcanedev/support": "~4.1.0"
     },
     "require-dev": {
-        "phpunit/phpcov":  "~3.0",
-        "phpunit/phpunit": "~5.0"
+        "phpunit/phpcov":                  "~3.0",
+        "phpunit/phpunit":                 "~5.0",
+        "orchestra/database":              "~3.4.0",
+        "orchestra/testbench-browser-kit": "~3.4.0"
     },
     "autoload": {
         "psr-4": {
@@ -30,15 +32,5 @@
         "psr-4": {
             "Arcanedev\\LaravelSeo\\Tests\\": "tests/"
         }
-    },
-    "scripts": {
-        "testbench": "composer require --dev \"orchestra/testbench-browser-kit=~3.0\" \"orchestra/database=~3.0\""
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "minimum-stability": "dev",
-    "prefer-stable" : true
+    }
 }
