--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
     "type":    "library",
     "license": "MIT",
     "require": {
-        "php":               ">=5.6",
-        "arcanedev/support": "~4.1.0"
+        "php":               ">=7.0",
+        "arcanedev/support": "~4.2.0"
     },
     "require-dev": {
-        "phpunit/phpcov":                  "~3.0",
-        "phpunit/phpunit":                 "~5.0",
-        "orchestra/database":              "~3.4.0",
-        "orchestra/testbench-browser-kit": "~3.4.0"
+        "phpunit/phpcov":      "~4.0",
+        "phpunit/phpunit":     "~6.0",
+        "orchestra/database":  "~3.5.0",
+        "orchestra/testbench": "~3.5.0"
     },
     "autoload": {
         "psr-4": {
